--- a/index.html
+++ b/index.html
@@ -4,5 +4,10 @@
   <title>ITMD-361 Internet Technologies and Web Design Project 1</title>
   </head>
   <body>
+	<header>
+		<nav>
+			<ul>
+				<li><a href="#jump" title="samepage">Home</a></li>
+				<li><a href="resume.html" title="resume"page2</a></li>
   </body>
   </html>
