--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 			<ul>
 				<li><a href="#jump" title="samepage">Home</a></li>
 				<li><a href="resume.html" title="resume"page2</a></li>
+			</ul>
+		</nav>
+	</header>
   </body>
   </html>
