--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<nav>
 			<ul>
 				<li><a href="#jump" title="samepage">Home</a></li>
-				<li><a href="resume.html" title="resume"page2</a></li>
+				<li><a href="resume.html" title="resume">page2</a></li>
 			</ul>
 		</nav>
 	</header>
