--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="#jump" title="samepage">Home</a></li>
-				<li><a href="resume.html" title="resume">page2</a></li>
-				<li><a href="Book_Recommendation.html" title="Book Recommendation">page3</a></li>
+				<li><a href="#jump" title="samepage"></a></li>
+				<li><a href="resume.html" title="resume"></a></li>
+				<li><a href="Book_Recommendation.html" title="Book Recommendation"></a></li>
 			</ul>
 		</nav>
 	</header>
