nav fix attempt 2

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="#jump" title="samepage"></a></li>
-				<li><a href="resume.html" title="resume"></a></li>
-				<li><a href="Book_Recommendation.html" title="Book Recommendation"></a></li>
+				<li><a href="#jump" title="samepage">home</a></li>
+				<li><a href="resume.html" title="resume">resume</a></li>
+				<li><a href="Book_Recommendation.html" title="Book Recommendation">book_recommendation</a></li>
 			</ul>
 		</nav>
 	</header>
