--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<nav>
 			<ul>
 				<li><a href="#jump" title="samepage">home</a></li>
-				<li><a href="resume.html" title="resume">resume</a></li>
-				<li><a href="Book_Recommendation.html" title="Book Recommendation">book_recommendation</a></li>
+				<li><a href="resume.html" title="resume">page2</a></li>
+				<li><a href="Book_Recommendation.html" title="Book Recommendation">page3</a></li>
 			</ul>
 		</nav>
 	</header>
