--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="#jump" title="samepage">home</a></li>
 				<li><a href="resume.html" title="resume">page2</a></li>
+				<li><a href="Book_Recommendation.html" title="Book Recommendation">page3</a></li>
 			</ul>
 		</nav>
 	</header>
