Index.html addition of small amount of text

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			</ul>
 		</nav>
 	</header>
-	<h1>My Home Page<h1>
+	<h1>My Home Page</h1>
+	<p>Welcome to my home page, My name is michael yelich, and this is a home page for project 1.</p>
   </body>
   </html>
