--- a/resume.html
+++ b/resume.html
@@ -11,5 +11,13 @@
 			</ul>
 		</nav>
 	</header>
+	<h1>My Resume</h1>
+		<h2>Michael Yelich</h2>
+		<p>myelich@hawk.iit.edu | 224-877-4487 | Rosemont, IL 60018</p>
+		<h3>Summary</h3>
+		<p>A IT intern who while new to his job is willing to learn and help assist the IT department in a variety of tasks, from basic maintenance of systems, to installing wiring to expand netowrks. With a few years of job and college experience, can adapt to most IT departments.</p>
+		<h3>Skills</h3>
+		<h3>Experience</h3>
+		<h3>Education and Training</h3>
   </body>
   </html>
