--- a/Book_Recommendation.html
+++ b/Book_Recommendation.html
@@ -16,6 +16,11 @@
 		<p> 
 		The story takes place in a fictional world where a large number of individuals have super powers. These powers are unlocked when a individual goes throug ha tramatic experience and can influence their powers. The main character, Taylor, is one such individual, who's bullies stuffed her in a locker and poured insects on her. I can't go much futher without spoiling the book, but it is a great series and is free.
 		</p>
-	<p><a href="https://parahumans.wordpress.com/table-of-contents/" title="Link to Worm">link</a></p>
+	<p><a href="https://parahumans.wordpress.com/table-of-contents/" title="Link to Worm">Worm</a></p>
+	<h2>Gregory the overlander</h2>
+		<p>
+		Another great series, this book takes place in roughly modern times and folows the protagonist gregory and his little brother in a undergorund world filled with dangers abound. Though the most intresting part of the book is the prophecies that follow the main character throughout the series.
+		</p>
+		<p><a href="https://www.amazon.com/Gregor-Overlander-Suzanne-Collins/dp/0439678137" title="Link to amazon page">Link to amazon page</a></p>
   </body>
   </html>
