--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <title>ITMD-361 Internet Technologies and Web Design Project 1</title>
+  <title>ITMD-361 Internet Technologies and Web Design Project 1 resume</title>
   </head>
   <body>
 	<header>
