Book recommendation nav fix

--- a/Book_Recommendations.html
+++ b/Book_Recommendations.html
@@ -8,8 +8,8 @@
 		<nav>
 			<ul>
 				<li><a href="index.html" title="home">Home</a></li>
+				<li><a href="resume.html" title="Resume">Resume</a></li>
 				<li><a href=#jump title="same page">Book Recommendations</a></li>
-				<li><a href="Book_Recommendation.html" title="Book Recommendations">Book Recommendations</a></li>
 			</ul>
 		</nav>
 	</header>
