--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="resume.html" title="resume">page2</a></li>
-				<li><a href="Book_Recommendation.html" title="Book Recommendation">page3</a></li>
+				<li><a href=#jump title="same page">Home</a></li>
+				<li><a href="resume.html" title="resume">Resume</a></li>
+				<li><a href="Book_Recommendations.html" title="Book Recommendation">Book Recommendations</a></li>
 			</ul>
 		</nav>
 	</header>
