--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,8 @@
 		<nav>
 			<ul>
 				<li><a href="index.html" title="Home">Home</a></li>
+				<li><a href=#jump title="same page">Resume</a></li>
+				<li><a href="Book_Recommendations.html" title="Book Recommendations">Book Recommendations</a></li>
 			</ul>
 		</nav>
 	</header>
