renamed book_recommendations to Media recommendations and added first picture

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<ul>
 				<li><a href=#jump title="same page">Home</a></li>
 				<li><a href="resume.html" title="resume">Resume</a></li>
-				<li><a href="Book_Recommendations.html" title="Book Recommendation">Book Recommendations</a></li>
+				<li><a href="Media_Recommendations" title="MediaRecommendations">Media Recommendations</a></li>
 			</ul>
 		</nav>
 	</header>
