--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 			<ul>
 				<li><a href="index.html" title="Home">Home</a></li>
 				<li><a href=#jump title="same page">Resume</a></li>
-				<li><a href="Book_Recommendations.html" title="Book Recommendations">Book Recommendations</a></li>
+				<li><a href="Media_Recommendations.html" title="Media Recommendations">Media Recommendations</a></li>
 			</ul>
 		</nav>
 	</header>
