--- a/Media_Recommendations.html
+++ b/Media_Recommendations.html
@@ -9,7 +9,7 @@
 			<ul>
 				<li><a href="index.html" title="home">Home</a></li>
 				<li><a href="resume.html" title="Resume">Resume</a></li>
-				<li><a href=#jump title="same page">Book Recommendations</a></li>
+				<li><a href=#jump title="same page">Media Recommendations</a></li>
 			</ul>
 		</nav>
 	</header>
