--- a/Media_Recommendations.html
+++ b/Media_Recommendations.html
@@ -23,6 +23,12 @@
 		<p>
 		Another great series, this book takes place in roughly modern times and folows the protagonist gregory and his little brother in a undergorund world filled with dangers abound. Though the most intresting part of the book is the prophecies that follow the main character throughout the series.
 		</p>
+		<img src="g.jpg" alt="First book cover">
 		<p><a href="https://www.amazon.com/Gregor-Overlander-Suzanne-Collins/dp/0439678137" title="Link to amazon page">Link to amazon page</a></p>
+	<h2>Lorax the original</h2>
+		<p>
+		Original lorax video, found it on youtube and think people should watch it. It is actually pretty good and I think ti was better than the movie.
+		</p>
+		<iframe width="490" height="360" src="https://www.youtube.com/embed/P0vwxKyceJ4" title="Dr. Seuss - The Lorax (1972)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
   </html>
