--- a/Media_Recommendations.html
+++ b/Media_Recommendations.html
@@ -18,6 +18,7 @@
 		<p> 
 		The story takes place in a fictional world where a large number of individuals have super powers. These powers are unlocked when a individual goes throug ha tramatic experience and can influence their powers. The main character, Taylor, is one such individual, who's bullies stuffed her in a locker and poured insects on her. I can't go much futher without spoiling the book, but it is a great series and is free.
 		</p>
+		<img src="w.jpg" alt="Worm's cover">
 	<p><a href="https://parahumans.wordpress.com/table-of-contents/" title="Link to Worm">Worm</a></p>
 	<h2>Gregory the overlander</h2>
 		<p>
