--- a/resume.html
+++ b/resume.html
@@ -38,6 +38,6 @@
 				<li>Colllected technical specification to assist in the documentation of various systems.</li>
 			</ul>
 		<h3>Education and Training</h3>
-			
+			<p> Illinois Institute of Technology | Chicago, IL | ITM Program Second Year</p>
   </body>
   </html>
