--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
 		</nav>
 	</header>
 	<h1>My Home Page</h1>
-	<p>Welcome to my home page, My name is michael yelich, and this is a home page for project 1.</p>
+		<p>Welcome to my home page, My name is michael yelich, and this is a home page for project 1.</p>
 	<h2>About Me</h2>
-	<p>For those who don't want to read my resume at the top, hello. My name is Michael Yelich. At the time of writing I am a 19 year old college student. I am currently workign towards a ITM degree. Some of my favorite things include pasta and reading.</p>
-	<img src="Images/M.jpg" alt="My Picture">
+		<p>For those who don't want to read my resume at the top, hello. My name is Michael Yelich. At the time of writing I am a 19 year old college student. I am currently workign towards a ITM degree. Some of my favorite things include pasta and reading.</p>
+		<img src="Images/M.jpg" alt="My Picture">
+	<h2>Links to old assignments<h2>
+		<p>Here you can find links to all my old assignments github repositories.</p>
+		<p><a href="https://github.com/MichaelYelich/ITM-361" title="ITM 361 1st Lab">ITM 361 1st Lab</a></p>
+		<p><a href="https://github.com/MichaelYelich/ITM361-Lab2" title="ITM 361 2nd Lab">ITM 361 2nd Lab</a></p>
+		<p><a href="https://github.com/MichaelYelich/ITM361-Lab3" title="ITM 361 3rd Lab">ITM 361 3rd Lab</a></p>
   </body>
   </html>
