--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<h1>My Home Page</h1>
 		<p>Welcome to my home page, My name is michael yelich, and this is a home page for project 1.</p>
 	<h2>About Me</h2>
-		<p>For those who don't want to read my resume at the top, hello. My name is Michael Yelich. At the time of writing I am a 19 year old college student. I am currently workign towards a ITM degree. Some of my favorite things include pasta and reading.</p>
+		<p>For those who don't want to read my resume at the top, hello. My name is Michael Yelich. At the time of writing I am a 19 year old college student. I am currently workign towards a ITM degree. Some of my favorite things include pasta and reading. I have been intrested in Computer Science in general for a number of years, thanks to a couple of personal factors. I have a few years of job experience working in my town's local IT department which has helped me develop my skills.</p>
 		<img src="Images/M.jpg" alt="My Picture">
 	<h2>Links to old assignments<\h2>
 		<p>Here you can find links to all my old assignments github repositories.</p>
