addition of high school diploma in education section of resume.html

--- a/resume.html
+++ b/resume.html
@@ -39,5 +39,6 @@
 			</ul>
 		<h3>Education and Training</h3>
 			<p> Illinois Institute of Technology | Chicago, IL | ITM Program Second Year</p>
+			<p> East Leyden Highschool | Franklin Park, IL | High school deploma</p>
   </body>
   </html>
