heading correction in index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<p>Reading</p>
 				<p>Video Games</p>
 				<p>Board Games</p>
-			<h3>Favorite Foods</p>
+			<h3>Favorite Foods</h3>
 				<p>Pasta</p>
 				<p>Burgers</P>
 				<p>Hot Dogs</p>
