--- a/Media_Recommendations.html
+++ b/Media_Recommendations.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <title>ITMD-361 Internet Technologies and Web Design Project 1 Book Recommendations</title>
+	<meta charset="UTF-8">
+	<title>ITMD-361 Internet Technologies and Web Design Project 1 Book Recommendations</title>
   </head>
   <body>
 	<header>
