--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <title>ITMD-361 Internet Technologies and Web Design Project 1 home page</title>
+	<meta charset="UTF-8">
+	<title>ITMD-361 Internet Technologies and Web Design Project 1 home page</title>
   </head>
   <body>
 	<header>
