--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,7 @@
 				<li>Server Problem Identification</li>
 			</ul>
 		<h3>Experience</h3>
-			<p>IT Intern | Village of Rosemont - Rolesmont, IL | 6/2022 - 08/.2022
+			<p>IT Intern | Village of Rosemont - Rolesmont, IL | 6/2022 - 08/2022</p>
 			<ul>
 				<li>Assisted crew with setting up technical equipment and operational framework.</li>
 				<li>Supported IT teams in maintaining company hardware and software systems.</li>
