modification to index.html

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 	<h2>About Me</h2>
 	<p> Hi, I'm Michael Yelich. This is my project and mroe speicifcally an about me.</p>
 	<h3>Hobbies and interests</h3>
-	  <p>Reading</p>
-	  <p>Video Games</p>
-	  <p>Board Games</p>
+	<ul>
+	  <li>Reading</li>
+	  <li>Video Games</li>
+	  <li>Board Games</li>
+	<ul>
 	<h3>Favorite Foods</h3>
 	  <p>Pasta</p>
 	  <p>Burgers</P>
