--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@
 	  <li>Board Games</li>
 	</ul>
 	<h3>Favorite Foods</h3>
-	
-	  <p>Pasta</p>
-	  <p>Burgers</P>
-	  <p>Hot Dogs</p>
-	  <p>Breakfast</p>
+	<ul>
+	  <li>Pasta</li>
+	  <li>Burgers</li>
+	  <li>Hot Dogs</li>
+	  <li>Breakfast</li>
+	 </ul>
 	<h3>Experience in the feild of Computer Science</h3>
-	  <p>I have always been interested in computer science, but my first real dive into it was a internship at my town's local IT department. There I got my first true taste of the job, and I have found it somthing I could see myself doing as a career.</p>
+	<p>I have always been interested in computer science, but my first real dive into it was a internship at my town's local IT department. There I got my first true taste of the job, and I have found it somthing I could see myself doing as a career.</p>
 	<img src="Images/M.jpg" alt="My Picture">
 	<h2>Links to old assignments</h2>
-	  <p>Here you can find links to all my old assignments github repositories.</p>
+	<p>Here you can find links to all my old assignments github repositories.</p>
 	  <p><a href="https://github.com/MichaelYelich/ITM-361" title="ITM 361 1st Lab">ITM 361 1st Lab</a></p>
 	  <p><a href="https://github.com/MichaelYelich/ITM361-Lab2" title="ITM 361 2nd Lab">ITM 361 2nd Lab</a></p>
 	  <p><a href="https://github.com/MichaelYelich/ITM361-Lab3" title="ITM 361 3rd Lab">ITM 361 3rd Lab</a></p>
