modiftication to index.html

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
 	<img src="Images/M.jpg" alt="My Picture">
 	<h2>Links to old assignments</h2>
 	<p>Here you can find links to all my old assignments github repositories.</p>
-	  <p><a href="https://github.com/MichaelYelich/ITM-361" title="ITM 361 1st Lab">ITM 361 1st Lab</a></p>
-	  <p><a href="https://github.com/MichaelYelich/ITM361-Lab2" title="ITM 361 2nd Lab">ITM 361 2nd Lab</a></p>
-	  <p><a href="https://github.com/MichaelYelich/ITM361-Lab3" title="ITM 361 3rd Lab">ITM 361 3rd Lab</a></p>
+	<ul>
+	  <li><a href="https://github.com/MichaelYelich/ITM-361" title="ITM 361 1st Lab">ITM 361 1st Lab</a></li>
+	  <li><a href="https://github.com/MichaelYelich/ITM361-Lab2" title="ITM 361 2nd Lab">ITM 361 2nd Lab</a></li>
+	  <li><a href="https://github.com/MichaelYelich/ITM361-Lab3" title="ITM 361 3rd Lab">ITM 361 3rd Lab</a></li>
+	</ul>
   </body>
   </html>
